fixing some bugs

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-MONGODB_URI=
+MONGODB_URI=mongodb+srv://moncef:moncef@cluster0.9kgcmdx.mongodb.net/
+CLOUDINARY_NAME=djbkrujkg
+CLOUDINARY_API_KEY=161777245272532
+CLOUDINARY_API_SECRET=Xfgbgf-9pqK9lPzovcn9DBTfpco
+CLOUDINARY_URL=cloudinary://161777245272532:Xfgbgf-9pqK9lPzovcn9DBTfpco@djbkrujkg
