--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.11.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.3",
     "autoprefixer": "10.4.14",
+    "cloudinary": "^1.40.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "mongoose": "^7.4.1",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3"
   }
 }
