--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@cloudinary/url-gen": "^1.11.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@lexical/react": "^0.12.0",
     "@mui/material": "^5.14.3",
     "autoprefixer": "10.4.14",
     "cloudinary": "^1.40.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "lexical": "^0.12.0",
     "mongoose": "^7.4.1",
     "next": "13.4.12",
     "postcss": "8.4.27",
